--- a/foodapp/food.app/src/app/app.scss
+++ b/foodapp/food.app/src/app/app.scss
@@ -1,1 +1,31 @@
+ion-content.backImage {
+    background: url(/assets/imagens/fundo.jpg);
+    background-size: cover;
+    
+}
+.backImage .scroll-content {
+    background: rgba(189, 8, 28, 0.8) !important; 
+}
 
+.list-transparent .item {
+    background: transparent !important;
+}
+.list.list-transparent .item-input:last-child {
+    border-bottom: none !important;
+}
+
+.logo {
+    width: 100%;
+    text-align: center;
+    margin-top: 20%;
+}
+.logo span {
+    color: white;
+    font-size: 1.6rem;
+    text-align: center;
+    display: block;
+    font-weight: bold;
+}
+.logo img {
+    width: 120px;
+}
